...
    /**
     Creates a default confirmation `AlertAction` with a title of Okay.
     - parameter preferred: `true` sets the default action preferred *NOTE: Only available on iOS 9+
     - returns: An AlertAction with default style
     */
    static func defaultAction(preferred: Bool = false) -> AlertAction {
        return AlertAction(title: "Okay", style: .default, preferred: preferred)
    }
}

